<resources>
    <string name="app_name">Tic tac toe</string>
    <string name="main_menu">Main menu</string>

    <string name="protocol">https://</string>
    <string name="domain">generic-game-service.herokuapp.com</string>
    <string name="base_path">/Game</string>

    <string name="join_game_path">/%1s/join</string>
    <string name="poll_game_path">/%1s/poll</string>
    <string name="update_game_path">/%1s/update</string>
    <string name="game_service_key">Gg1E6gJAAg</string>

    <string name="start_new_game">Start new game</string>
    <string name="create_new_game">Create new game</string>
    <string name="join_game">Join game</string>
    <string name="play_vs_bot">Play vs bot</string>
    <string name="player_name">Player name</string>
    <string name="game_id_hint">Game id</string>

    <string name="game_id">Game id:</string>
    <string name="playerOne">Player one:</string>
    <string name="playerTwo">Player two:</string>

    <string name="draw">Draw</string>
    <string name="you_win">You win</string>
    <string name="you_lose">You lose</string>

    <string name="wait_for_player_one">Waiting for player one..</string>
    <string name="wait_for_player_two">Waiting for player two..</string>
    <string name="player_left_game">Opponent left the game. You win</string>

    <string name="choose_mark">Click to choose mark</string>
    <string name="mark_info">X starts the game</string>
    <string name="x_image">X</string>
    <string name="o_image">O</string>
</resources>