<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".GameBotActivity">

    <TextView
        android:id="@+id/textViewChooseMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:text="@string/choose_mark" />

    <TextView
        android:id="@+id/textViewStartingPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="15sp"
        android:text="@string/mark_info" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/imageViewX"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/x_image"
            app:srcCompat="@drawable/ic_cross" />

        <ImageView
            android:id="@+id/imageViewO"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/o_image"
            app:srcCompat="@drawable/ic_circle" />
    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="265dp"
        android:layout_margin="10dp"
        android:layout_gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView0"
                style="@style/game_board"
                android:background="@color/tea_green_medium" />

            <TextView
                android:id="@+id/textView1"
                style="@style/game_board"
                android:background="@color/tea_green_medium" />

            <TextView
                android:id="@+id/textView2"
                style="@style/game_board"
                android:background="@color/tea_green_medium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                style="@style/game_board"
                android:background="@color/tea_green_medium" />

            <TextView
                android:id="@+id/textView4"
                style="@style/game_board"
                android:background="@color/tea_green_medium" />

            <TextView
                android:id="@+id/textView5"
                style="@style/game_board"
                android:background="@color/tea_green_medium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                style="@style/game_board"
                android:background="@color/tea_green_medium" />

            <TextView
                android:id="@+id/textView7"
                style="@style/game_board"
                android:background="@color/tea_green_medium" />

            <TextView
                android:id="@+id/textView8"
                style="@style/game_board"
                android:background="@color/tea_green_medium" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="" />

    <Button
        android:id="@+id/buttonStartNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/start_new_game" />

</LinearLayout>