<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/gameID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_id"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameIdValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameID" />

    <TextView
        android:id="@+id/playerOneText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playerOne"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameIdValue" />

    <TextView
        android:id="@+id/playerOneValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerOneText"/>

    <TextView
        android:id="@+id/playerTwoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playerTwo"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerOneValue" />

    <TextView
        android:id="@+id/playerTwoValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerTwoText" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text=""
                android:textAlignment="center"
                android:textSize="50sp"
                android:background="@color/teal_200" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text=""
                android:textAlignment="center"
                android:textSize="50sp"
                android:background="@color/teal_200" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text=""
                android:textAlignment="center"
                android:textSize="50sp"
                android:background="@color/teal_200" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text=""
                android:textAlignment="center"
                android:textSize="50sp"
                android:background="@color/teal_200" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text=""
                android:textAlignment="center"
                android:textSize="50sp"
                android:background="@color/teal_200" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text=""
                android:textAlignment="center"
                android:textSize="50sp"
                android:background="@color/teal_200" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text=""
                android:textAlignment="center"
                android:textSize="50sp"
                android:background="@color/teal_200" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text=""
                android:textAlignment="center"
                android:textSize="50sp"
                android:background="@color/teal_200" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text=""
                android:textAlignment="center"
                android:textSize="50sp"
                android:background="@color/teal_200" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>